src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.clip-arrow-inner {
  clip-path: polygon(50% 100%, 0% 0%, 100% 0%);
}

#centerDiv {
  background: transparent;
}

input::placeholder {
  color: #fff;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 14px;
}


.wheel {
  filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
  border-radius: 50%;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 20px 10px, 
  rgba(0, 0, 0, 0.12) 0px 4px 6px 0px,   
  rgba(0, 0, 0, 0.17) 0px 6px 12px 0px; 
}

